--- a/MicroProject_02/index.html
+++ b/MicroProject_02/index.html
@@ -46,7 +46,7 @@
           <img src="img__logs/Group 1.png" alt="body image" id="bodyimg1">
 
           <div class="bodytext">
-            <p id="text">it's not only writers who can benifit from this free online tool. if You're a progrmmer who's working on a .......</p>
+            <p id="text">it's not only writers who can benifit from this free online tool. if You're a progrmmer <br><br> who's working on a .......</p>
           </div>
 
           <img src="img__logs/Frame 1.png" alt="media logo" id="media">
